agregue estructura html

--- a/main2.html
+++ b/main2.html
@@ -1,4 +1,4 @@
-<section class="main">
+<section class="main2">
     <div class="main__container-text">
         <h1 class="main__title">
             No solo es Cafe es <span class="main__title--green">Starbuks</span>
